// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details matches snapshot 1`] = `
<div
  className="Details"
>
  <nav
    className="navbar"
  >
    <div
      className="divbutton"
    >
      <button
        className="button"
        onClick={[Function]}
        type="button"
      >
        <span
          className="material-symbols-outlined"
        >
          arrow_back_ios
        </span>
      </button>
    </div>
    <div>
      <h1
        className="h1title"
      >
        DETAILS
      </h1>
    </div>
  </nav>
  <div>
    <div
      className="divheader"
    >
      <div
        className="divtitle"
      >
        <div
          className="divtitleimg"
        >
          <img
            alt="flag"
            src="https://restcountries.com/data/afg.svg"
          />
        </div>
        <div
          className="divtitletext"
        >
          <h1>
            Afghanistan
          </h1>
          <p>
            LAT:
             
            20
          </p>
          <p>
            LONG:
             
            20
          </p>
        </div>
      </div>
    </div>
    <div
      className="divseparator"
    >
      <p
        className="septext"
      >
        COUNTRY DETAILS
      </p>
    </div>
    <ul
      className="ul"
    >
      <li
        className="liDetails"
      >
        <p
          className="pdetails"
        >
          <span
            className="pstrong"
          >
            Common name
          </span>
          <span
            className="pproperty"
          >
            Afghanistan
          </span>
        </p>
        <p
          className="pdetails"
        >
          <span
            className="pstrong"
          >
            Official name
          </span>
          <span
            className="pproperty"
          >
            Islamic Republic of Afghanistan
          </span>
        </p>
        <p
          className="pdetails"
        >
          <span
            className="pstrong"
          >
            Capital
          </span>
          <span
            className="pproperty"
          >
            Kabul
          </span>
        </p>
        <p
          className="pdetails"
        >
          <span
            className="pstrong"
          >
            Country region
          </span>
          <span
            className="pproperty"
          >
            Asia
          </span>
        </p>
        <p
          className="pdetails"
        >
          <span
            className="pstrong"
          >
            Country-subregion
          </span>
          <span
            className="pproperty"
          >
            Southern Asia
          </span>
        </p>
        <p
          className="pdetails"
        >
          <span
            className="pstrong"
          >
            Country-population
          </span>
          <span
            className="pproperty"
          >
            32225560
          </span>
        </p>
        <p
          className="pdetails"
        >
          <span
            className="pstrong"
          >
            Country-area
          </span>
          <span
            className="pproperty"
          >
            652230
          </span>
        </p>
        <p
          className="pdetails"
        >
          <span
            className="pstrong"
          >
            Continent
          </span>
          <span
            className="pproperty"
          />
        </p>
        <p
          className="pdetails"
        >
          <span
            className="pstrong"
          >
            Timezones
          </span>
          <span
            className="pproperty"
          >
            UTC+04:30
          </span>
        </p>
        <p
          className="pdetails"
        >
          <span
            className="pstrong"
          >
            Start of the week
          </span>
          <span
            className="pproperty"
          >
            Saturday
          </span>
        </p>
        <p
          className="pdetails"
        >
          <span
            className="pstrong"
          >
            Street view
          </span>
          <a
            className="pproperty"
            href="https://www.google.com/maps/place/Afghanistan"
          >
            google maps
          </a>
        </p>
        <p
          className="pdetails"
        >
          <span
            className="pstrong"
          >
            Language:
          </span>
          <ul
            className="languageContainer"
          >
            <li
              className="languageItem"
            >
              Pashto
            </li>
            <li
              className="languageItem"
            >
              Uzbek
            </li>
            <li
              className="languageItem"
            >
              Turkmen
            </li>
          </ul>
        </p>
        <p
          className="pdetails"
        >
          <span
            className="pstrong"
          >
            Currency:
          </span>
          <ul
            className="languageContainer"
          >
            <li
              className="languageItem"
            >
              Afghan afghani
               
              (
              ؋
              )
            </li>
          </ul>
        </p>
      </li>
    </ul>
  </div>
</div>
`;

exports[`DetailsNavbar matches snapshot 1`] = `
<nav
  className="navbar"
>
  <div
    className="divbutton"
  >
    <button
      className="button"
      onClick={[Function]}
      type="button"
    >
      <span
        className="material-symbols-outlined"
      >
        arrow_back_ios
      </span>
    </button>
  </div>
  <div>
    <h1
      className="h1title"
    >
      DETAILS
    </h1>
  </div>
</nav>
`;

exports[`Home matches snapshot 1`] = `
<div
  className="home"
>
  <nav
    className="navbar"
  >
    <div>
      <a
        aria-current="page"
        className="links active"
        href="/"
        onClick={[Function]}
      >
        Countries
      </a>
    </div>
    <div
      className="header"
    >
      <div
        className="headerbutton"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <span
            className="material-symbols-outlined"
          >
            search
          </span>
        </button>
      </div>
    </div>
  </nav>
  <div
    className="divheader"
  >
    <div
      className="divtitle"
    >
      <div
        className="imageContainer"
      >
        <img
          alt=""
          src="Global-Map-Transparent-700x416.png"
        />
      </div>
      <div
        className="textContainer"
      >
        <h1>
          COUNTRIES AROUND
          <br />
          THE WORLD
        </h1>
      </div>
    </div>
  </div>
  <div
    className="separator"
  >
    <p
      className="septext"
    >
      LIST OF COUNTRIES
    </p>
  </div>
  <ul
    className="ulCountries"
  >
    <a
      className="link"
      href="/Details/Afghanistan"
      onClick={[Function]}
    >
      <li
        className="liCountry"
      >
        <span
          className="material-symbols-outlined arrowCircleRight"
        >
          arrow_circle_right
        </span>
        <div
          className="countryImage"
        >
          <img
            alt="flag"
            src="https://restcountries.com/data/afg.svg"
          />
        </div>
        <div
          className="countryDetails"
        >
          <p
            className="liname"
          >
            Afghanistan
          </p>
          <p
            className="licood"
          >
            LAT:
             
            20
          </p>
          <p
            className="licood"
          >
            LONG:
             
            20
          </p>
        </div>
      </li>
    </a>
    <a
      className="link"
      href="/Details/Albania"
      onClick={[Function]}
    >
      <li
        className="liCountry"
      >
        <span
          className="material-symbols-outlined arrowCircleRight"
        >
          arrow_circle_right
        </span>
        <div
          className="countryImage"
        >
          <img
            alt="flag"
            src="https://restcountries.com/data/alb.svg"
          />
        </div>
        <div
          className="countryDetails"
        >
          <p
            className="liname"
          >
            Albania
          </p>
          <p
            className="licood"
          >
            LAT:
             
            20
          </p>
          <p
            className="licood"
          >
            LONG:
             
            20
          </p>
        </div>
      </li>
    </a>
  </ul>
</div>
`;

exports[`HomeNavbar matches snapshot 1`] = `
<nav
  className="navbar"
>
  <div>
    <a
      aria-current="page"
      className="links active"
      href="/"
      onClick={[Function]}
    >
      Countries
    </a>
  </div>
  <div
    className="header"
  >
    <div
      className="headerbutton"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <span
          className="material-symbols-outlined"
        >
          search
        </span>
      </button>
    </div>
  </div>
</nav>
`;
